--- a/approximate/CMakeLists.txt
+++ b/approximate/CMakeLists.txt
@@ -5,5 +5,4 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -march=native -pthread")
 
-add_executable(ea src/main.cpp src/builders.cpp src/ea.cpp src/graph.cpp src/modifiers.cpp src/state.cpp src/utils.cpp)
-
+add_executable(solve src/main.cpp src/utils.cpp src/graph.cpp src/state.cpp src/exact.cpp src/builders.cpp)
