--- a/approximate/CMakeLists.txt
+++ b/approximate/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -march=native -pthread")
 
-add_executable(alns src/main.cpp src/save.cpp src/utils.cpp src/graph.cpp src/state.cpp src/exact.cpp src/builders.cpp src/alns_operators.cpp src/alns_selectors.cpp src/alns.cpp)
+add_executable(alns src/main.cpp src/save.cpp src/utils.cpp src/graph.cpp src/state.cpp src/exact.cpp src/alns_builders.cpp src/alns_operators.cpp src/alns_selectors.cpp src/alns.cpp)
