Really good improvement

--- a/approximate/CMakeLists.txt
+++ b/approximate/CMakeLists.txt
@@ -3,6 +3,9 @@ project(SmartCity)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/opt/homebrew/opt/libomp/lib -I/opt/homebrew/opt/libomp/include -lomp -O2 -march=native -pthread -Xclang -fopenmp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/homebrew/opt/libomp/include -O2 -march=native -pthread -Xclang -fopenmp")
+
+link_directories(/opt/homebrew/opt/libomp/lib)
+add_link_options(-lomp)
 
 add_executable(alns src/main.cpp src/save.cpp src/utils.cpp src/graph.cpp src/state.cpp src/exact.cpp src/alns_builders.cpp src/alns_operators.cpp src/alns_selectors.cpp src/alns_acceptors.cpp src/alns_local_search.cpp src/alns.cpp)
